[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/GameOver.gd" type="Script" id=1]
[ext_resource path="res://actors/player/player_data.tres" type="Resource" id=2]
[ext_resource path="res://interface/fonts/default-font.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/fonts/title-font.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
retry_scene = "res://levels/Level-01.tscn"
player_data = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0

[node name="Score" type="Label" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "Score: 0000"
align = 1

[node name="RetryButton" type="Button" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 256.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 3 )
text = "Retry"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 256.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 4 )
text = "End of the Game"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
[connection signal="button_up" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_button_up"]
[connection signal="button_up" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
